# Stg

./: UpgradeLog.XML  UpgradeLog2.XML  UpgradeLog3.XML  UpgradeLog4.XML  libogg-stego.ncb  stego-project.sln  stego-project.sln.old  stego-project.suo.old  upload-master.sh  upload.sh
BMPanalyse/: BMPanalyse.cpp  BMPanalyse.vcproj  ReadMe.txt  stdafx.cpp
BMPlsb/: BMPlsb.cpp  BMPlsb.vcproj  ReadMe.txt  stdafx.cpp
Debug/: pfc.lib
Release/: libbmp.lib  pfc.lib
Win32/Debug/: libvorbis.lib
Win32/Release/: libogg-dynamic.lib  libogg.lib  libvorbis.lib
Win32/Release_SSE2/: libogg-dynamic.lib  libogg.lib  libvorbis.lib
Window/: main.cpp  stegodialog.cpp  stegodialog.h
WindowStego/: AssemblyInfo.cpp  Form1.h  ReadMe.txt  WindowStego.cpp  WindowStego.vcproj  app.rc  resource.h  stdafx.cpp  stdafx.h
bass/c/3dtest/: 3dtest.vcproj
bass/c/basstest/: basstest.vcproj
bass/c/contest/: contest.vcproj
bass/c/custloop/: custloop.vcproj
bass/c/dsptest/: dsptest.vcproj
bass/c/fxtest/: fxtest.vcproj
bass/c/livefx/: livefx.vcproj
bass/c/livespec/: livespec.vcproj
bass/c/multi/: multi.vcproj
bass/c/netradio/: netradio.c  netradio.vcproj
bass/c/plugins/: plugins.vcproj
bass/c/rectest/: rectest.vcproj
bass/c/speakers/: speakers.vcproj
bass/c/spectrum/: spectrum.vcproj
bass/c/synth/: synth.vcproj
bass/c/writewav/: writewav.vcproj
edcast/: ReadMe.txt
edcast-old/edcast/: configure.in
edcast-old/edcast/Release/: foo_edcast.lib
edcast-old/edcast/conf/: Makefile.am  edcast_LAME.cfg  edcast_OggVorbis.cfg
edcast-old/edcast/src/: About.cpp  AdvancedSettings.cpp  BasicSettings.cpp  BasicSettings.h  Config.cpp  Config.h  EditMetadata.cpp  EditMetadata.h  FindWindow.cpp  FindWindow.h  MainWindow.cpp  MainWindow.h  YPSettings.cpp  YPSettings.h  edcast.rc  edcastStandalone.cpp  edcastStandalone.h  edcast_foobar.cpp  edcast_foobar.vcproj  edcast_winamp.cpp  edcast_winamp.vcproj  resource.h
edcast-old/edcast/src/Debug/: dsp_edcast.dll.embed.manifest.res  dsp_edcast.lib  edcast.res  foo_edcast.lib  pfc.lib
edcast-old/edcast/src/Release/: dsp_edcast.lib  edcast.res  pfc.lib
edcast-old/edcast/src/libedcast/: libedcast.cpp  libedcast.h  libedcast.vcproj
edcast-old/edcast/src/libedcast/Release/: libedcast.lib
edcast-old/edcast_jack/: edcast.cpp
edcast-old/edcast_jack/libedcast/: libedcast.vcproj
edcast-old/gen_dosomething/: Eca.h  Script1.rc  Socket.cpp  Socket.h  doXML.cpp  gen.h  resource.h
edcast-old/gen_dosomething/AdvXMLParser/: AdvXMLParser.h  AdvXMLParserConfig.h  Defs.h  Reader.cpp  StdAfx.cpp
edcast-old/gen_songrequester/: Eca.h  Makefile.am  Script1.rc  micro_proxy.h  resource.h  songrequester.cpp  systray.h  websvr.h
edcast-old/libedcast/: libedcast.vcproj
edcast-old/libedcast/Debug/: libedcast.lib
edcast-old/libedcast/Release/: libedcast.lib
edcast-old/ml_icecastlist/: childwnd.h  icecastlist.rc  ml.h  view_icecastlist.cpp
edcast-old/ml_icecastlist/winamp/: wa_ipc.h
edcast-old/ml_sclist/: listview.h  ml_lib.cpp  sclist.rc  urlfetch.cpp  urlfetch.h
edcast-old/streamTranscoderv3/: Makefile.am  socket_client.c  sourcethread.cpp  streamTranscoderUIv3.cpp  streamTranscoderUIv3.rc  streamTranscoderv3Service.cpp
edcast-old/streamTranscoderv3/libedcast/: libedcast.h
edcast/edcast/: Makefile.am
edcast/edcast/Release/: foo_edcast.lib
edcast/edcast/conf/: edcast_AAC.cfg  edcast_OggFlac.cfg
edcast/edcast/src/: AdvancedSettings.cpp  BasicSettings.cpp  Config.cpp  Config.h  Dummy.cpp  EditMetadata.cpp  FindWindow.cpp  MainWindow.cpp  YPSettings.cpp  edcast.rc  edcastStandalone.vcproj  edcast_foobar.cpp  edcast_foobar.vcproj  edcast_winamp.cpp  stdafx.h  (+4 more)
edcast/gen_dosomething/: Eca.cpp  Makefile.am  StatusDialog.cpp  StatusDialog.h  configure.in  doXML.h  dosomething.cpp  timer.c
edcast/gen_dosomething/AdvXMLParser/: AdvXMLParserDefs.h  Elements.cpp  Readme.txt  StdAfx.h  Writer.cpp
edcast/gen_songrequester/: Eca.cpp  Proxy.cpp  Proxy.h  Socket.cpp  Socket.h  configure.in  micro_proxy.cpp  websvr.cpp
edcast/libedcast/: libedcast.cpp  libedcast.h  libedcast.vcproj
edcast/ml_icecastlist/: listview.cpp  resource.h  urlfetch.cpp  urlfetch.h
edcast/ml_sclist/: resource.h  view_sclist.cpp
edcast/streamTranscoderv3/: cbuffer.c  configure.in  decodethread.cpp  mp3decoder.cpp  reconnectthread.cpp  resource.h  streamTranscoderUIv3.h  streamTranscoderUIv3.vcproj  streamTranscoderUIv3Dlg.cpp  streamTranscoderUIv3Dlg.h  streamTranscoderV3Service.vcproj  streamTranscoderv3.cpp  vorbisdecoder.cpp
excel10/: Form1.h  Header.cpp  Header.h  comexcel.cpp  comexcel.vcproj
jpeg-8a/: cdjpeg.h  cjpeg.c  cjpeg.vcproj  djpeg.c  djpeg.vcproj  jcdctmgr.c  jchuff.c  jdcoefct.c  jpeg.vcproj  jpeglib.h  jpegtran.c  jpegtran.h  jpegtran.vcproj
jpeg-8a/libs/: libjpeg.lib
jpegtest/: ReadMe.txt  jpegtest.cpp  jpegtest.vcproj  stdafx.cpp
libbmp/: BMPimage.cpp  BMPimage.h  EasyBMP.cpp  EasyBMP.h  EasyBMP_BMP.h  Exception.cpp  Exception.h  ReadMe.txt  libbmp.vcproj  resource.h  stdafx.cpp
libs/: cjpeg.lib  djpeg.lib  jpegtran.lib  libbmp.lib  libedcast.lib  libjpeg.lib  libogg.lib  libstego.lib  libvorbis.lib  vorbis.lib
libstego/: AP_CRC16.CPP  AP_CRC16.H  AP_CRC32.CPP  AP_CRC32.H  Array.cpp  Array.h  BitArray.cpp  BitArray.h  ClassDiagram1.cd  Exception.cpp  Exception.h  JpegStegoAnalysis.cpp  JpegStegoAnalysis.h  JpegStegoDecoder.cpp  JpegStegoDecoder.h  JpegStegoEncoder.cpp  JpegStegoEncoder.h  JpegStegoLog.cpp  JpegStegoLog.h  LSBStegoDecoder.cpp  LSBStegoDecoder.h  LSBStegoEncoder.cpp  LSBStegoEncoder.h  LibInclude.h  Makefile  Methods.cpp  Methods.h  OggStegoDecoder.cpp  OggStegoDecoder.h  OggStegoEncoder.cpp  OggStegoEncoder.h  ReadMe.txt  StegoArray.cpp  StegoArray.h  StegoDecoder.cpp  StegoDecoder.h  StegoEncoder.cpp  StegoEncoder.h  constants.h  libogg-stego.cpp  (+5 more)
libvorbis-1.2.3/examples/: decoder_example.c  encoder_example.c
libvorbis-1.2.3/lib/: mapping0.c  res0.c
libvorbis-1.2.3/win32/: vorbis.def
oggtest/: ReadMe.txt  oggtest.cpp  oggtest.vcproj  stdafx.cpp
test/WinStego/: message3.in  message4.in  message5.in  message6.in
(+44 files in other folders)
