## Process this with automake to create Makefile.in
 
AUTOMAKE_OPTIONS = foreign
 
EXTRA_DIST =		\
		Proxy.cpp \
		AUTHORS \
		CHANGES \
		COPYING \
		Eca.cpp \
		Eca.h \
		INSTALL \
		Script1.aps \
		Proxy.h \
		Readme \
		autogen.sh \
		Script1.clw \
		Script1.rc \
		Socket.cpp \
		Socket.h \
		StdAfx.cpp \
		StdAfx.h \
		Winamp.h \
		frontend.h \
		gen.h \
		gen_songrequester.dsp \
		gen_songrequester.dsw \
		gen_songrequester.html \
		gen_songrequester.nsi \
		index.php3 \
		micro_proxy.cpp \
		micro_proxy.h \
		playlist.html \
		resource.h \
		screen1.jpg \
		screen2.jpg \
		screen3.jpg \
		songrequester.cpp \
		songrequester.html \
		systray.h \
		websvr.cpp \
		websvr.h
