## Process this with automake to create Makefile.in
 
AUTOMAKE_OPTIONS = foreign
 
EXTRA_DIST =		\
		DOS1.JPG \
		AUTHORS \
		CHANGES \
		COPYING \
		AdvXMLParser \
		AdvXMLParser/AdvXMLParser.dsp \
		AdvXMLParser/AdvXMLParser.dsw \
		AdvXMLParser/AdvXMLParser.h \
		AdvXMLParser/AdvXMLParserConfig.h \
		AdvXMLParser/AdvXMLParserDefs.h \
		AdvXMLParser/AdvXMLParserPrimitiveTypes.h \
		AdvXMLParser/Defs.h \
		AdvXMLParser/Elements.cpp \
		AdvXMLParser/Elements.inl \
		AdvXMLParser/ErrorMessages.cpp \
		AdvXMLParser/Iterators.inl \
		AdvXMLParser/Reader.cpp \
		AdvXMLParser/Reader.inl \
		AdvXMLParser/Readme.txt \
		AdvXMLParser/StdAfx.cpp \
		AdvXMLParser/StdAfx.h \
		AdvXMLParser/TemplateMembers.inl \
		AdvXMLParser/Writer.cpp \
		AdvXMLParser/Writer.inl \
		DOS2.JPG \
		DOS3.JPG \
		DOS4.JPG \
		DOS5.JPG \
		DOS6.JPG \
		DOS7.JPG \
		Eca.cpp \
		Eca.h \
		INSTALL \
		Readme \
		Script1.aps \
		Script1.clw \
		Script1.rc \
		Socket.cpp \
		Socket.h \
		StatusDialog.cpp \
		StatusDialog.h \
		StdAfx.cpp \
		StdAfx.h \
		Winamp.h \
		doXML.cpp \
		doXML.h \
		dosome1.jpg \
		dosome2.jpg \
		dosome3.jpg \
		dosomething.cpp \
		dosomething.dsp \
		dosomething.dsw \
		dosomething.html \
		dosomething_logo.jpg \
		dosomething_logo.psd \
		ds1.psd \
		frontend.h \
		gen.h \
		index.php3 \
		logo1.jpg \
		oddsock.gif \
		oddsock_logo.bmp \
		resource.h \
		screen1.jpg \
		template.html \
		templateout.html \
		timer.c
